--- a/css/header.css
+++ b/css/header.css
@@ -359,7 +359,7 @@
  .user-sidebar .stat-value {
      font-size: 1.5rem;
      font-weight: 700;
-     color: var(--primary);
+     color: var(--webMainColor);
      margin-bottom: 5px;
  }
 
