--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,8 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root {
-    --fontFamily: 'Roboto', sans-serif;
+    /* --fontFamily: 'Roboto', sans-serif; */
+    --fontFamily: "Poppins", sans-serif;
     --pinkColor: #e91e63;
     --primaryColor: #007bff;
     --webMainColor: #214f79;
@@ -561,8 +563,8 @@ select:focus {
 
 .label {
     font-size: 15px;
-    color: #333;
-    font-weight: 700;
+    color: #000000;
+    font-weight: 500;
     display: inline-block;
     margin-bottom: 5px;
     font-family: var(--fontFamily);
@@ -675,7 +677,7 @@ select.form-control option {
 .heading {
     color: #333;
     font-family: var(--fontFamily);
-    font-weight: bold;
+    font-weight: 600;
     font-size: 25px;
     padding: 0;
     margin: 0;
