--- a/css/user/styles.css
+++ b/css/user/styles.css
@@ -3,12 +3,33 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .dashboard-container {
-    background: url(../../images/vehicle.png) no-repeat center center;
+    background: url(../../images/Dashboard.png) no-repeat center center;
     background-size: cover;
     width: 100%;
-    padding-left: 80px;
+    padding-left: 40px;
     padding-top: 50px;
     position: relative;
+    background-attachment: fixed;
+}
+
+.dashboard-svg-bar {
+    position: absolute;
+    bottom: -14px;
+    right: 5px;
+}
+
+input,
+label,
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+span,
+button,
+a {
+    font-family: var(--fontFamily) !important;
 }
 
 
@@ -24,30 +45,29 @@ select.form-control:not([size]):not([multiple]) {
     color: white;
 }
 
-.dashboard-container::after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background: #2b446bc2;
-    top: 0;
-    left: 0;
-}
-
 .dashboard-container .action-buttons {
     display: flex;
     position: absolute;
-    bottom: 90px;
+    bottom: 40px;
+    background: #fafafa;
+    padding: 12px 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 25px 0px #5555;
+}
+
+.dashboard-container .single-btn:last-child {
+    margin-right: 0px;
+    padding-right: 0px;
+    border: none;
 }
 
 .dashboard-container .single-btn {
-    background: #fff;
+    background: transparent;
     margin-right: 32px;
-    border-radius: 6px;
+    border-right: 1px solid #ccc;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 10px 16px;
+    padding-right: 16px;
     cursor: pointer;
     position: relative;
     color: #333;
@@ -59,29 +79,9 @@ select.form-control:not([size]):not([multiple]) {
 
 .dashboard-container .single-btn svg {
     margin-right: 13px;
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     position: relative;
-    padding-top: 2px;
-    background: #e7e7e7;
-    padding: 7px;
-    border-radius: 50%;
-    position: relative;
-}
-
-.dashboard-container .single-btn svg::after {
-    left: auto;
-    z-index: 9999999;
-}
-
-.dashboard-container .single-btn::after {
-    content: "";
-    width: 5px;
-    height: 5px;
-    background: #ccc;
-    position: absolute;
-    top: 7px;
-    left: 10px;
 }
 
 /* Remove borders, make modern */
