--- a/user/css/responsive.css
+++ b/user/css/responsive.css
@@ -132,6 +132,7 @@
 
      .dashboard-container .single-btn {
          margin-bottom: 20px;
+         border-right: none;
      }
 
      .dashboard-container {
@@ -139,11 +140,11 @@
      }
 
      .dashboard-container .header h2 {
-         font-size: 40px !important;
+         font-size: 30px !important;
      }
 
-     .heading-sm-w {
-         width: 320px !important;
+     .dashboard-container .header p {
+         font-size: 14px !important;
      }
 
      .user-info h4 {
@@ -238,6 +239,10 @@
      .sm-pull-away .transparent-btn {
          margin-top: 10px;
      }
+
+     .dashboard-container .single-btn:last-child {
+         margin-bottom: 5px;
+     }
  }
 
  @media (max-width: 330px) {
@@ -257,14 +262,6 @@
          margin-top: 10px;
      }
 
-     .dashboard-container .header h2 {
-         font-size: 35px !important;
-     }
-
-     .heading-sm-w {
-         width: 280px !important;
-     }
-
      .sm-pull-away {
          flex-direction: column;
          display: flex;
@@ -272,5 +269,9 @@
 
      .sm-pull-away .transparent-btn {
          margin-top: 10px;
+     }
+
+     .heading-sm-w h2 {
+         font-size: 14px !important;
      }
  }
