--- a/css/header.css
+++ b/css/header.css
@@ -546,6 +546,10 @@
      margin-right: 10px;
  }
 
+ .dropdown-menu .dropdown-item svg {
+     width: 20px;
+ }
+
  .dropdown-toggle.no-arrow-icon::after {
      content: none !important;
  }
