--- a/user/css/send-sms.css
+++ b/user/css/send-sms.css
@@ -4,6 +4,7 @@
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     margin-bottom: 25px;
+    display: none;
 }
 
 .send-sms-container .garage-header {
