--- a/css/user/styles.css
+++ b/css/user/styles.css
@@ -729,3 +729,43 @@ body.all-hide iframe {
 body.all-hide #registrationCarContainer .add-new-customer-btn {
     display: none !important;
 }
+
+/* Sweeet Alert Styling */
+.swal2-show {
+    animation: none !important;
+    /* disables default fade */
+}
+
+.swal2-container .swal2-icon {
+    margin: 0.5em auto 1em !important;
+}
+
+.swal2-container #swal2-content {
+    font-size: 15px !important;
+    color: #9D9D9D !important;
+}
+
+.swal2-container .swal2-popup {
+    border-radius: 20px !important;
+    width: 30em !important;
+}
+
+.swal2-container .swal2-title {
+    color: var(--webMainColor) !important;
+}
+
+.swal2-container .swal2-styled.swal2-confirm {
+    padding: 8px 35px !important;
+    border-radius: 10px !important;
+}
+
+.swal2-container .swal2-styled.swal2-cancel {
+    background: transparent !important;
+    border: 1px solid var(--webMainColor) !important;
+    color: var(--webMainColor) !important;
+    box-shadow: unset !important;
+    padding: 8px 35px !important;
+    border-radius: 10px !important;
+}
+
+/* Sweeet Alert Styling */
