update improvements like date picker add and date format improve

--- a/css/header.css
+++ b/css/header.css
@@ -506,7 +506,7 @@
      font-size: 0.9rem;
  }
 
- .dropdown-menu {
+ .navbar .dropdown-menu {
      right: 0;
      left: auto;
      border-radius: 0;
