--- a/css/user/styles.css
+++ b/css/user/styles.css
@@ -718,6 +718,7 @@ body.all-hide .navbar {
 
 body.all-hide #mainContent {
     margin: 0px !important;
+    padding-top: 0px;
 }
 
 
@@ -726,9 +727,9 @@ body.all-hide iframe {
     border: none !important;
 }
 
-body.all-hide #registrationCarContainer .add-new-customer-btn {
+/* body.all-hide #registrationCarContainer .add-new-customer-btn {
     display: none !important;
-}
+} */
 
 /* Sweeet Alert Styling */
 .swal2-show {
