--- a/user/css/invoice.css
+++ b/user/css/invoice.css
@@ -147,6 +147,7 @@
     border: none;
     outline: none;
     margin-left: 20px;
+    text-align:center;
 }
 
 .invoice-items-container .remove-row {
