--- a/css/user/styles.css
+++ b/css/user/styles.css
@@ -487,7 +487,7 @@ table.dataTable tbody td {
 }
 
 .br-5 {
-    border-radius: 5px;
+    border-radius: 5px !important;
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.current,
