--- a/css/user/styles.css
+++ b/css/user/styles.css
@@ -831,3 +831,62 @@ body.all-hide iframe {
 }
 
 /* bs datepicker */
+
+
+/* Mot history popup */
+#modalMotContent .mot-card {
+    background-color: white;
+    color: #333;
+    border-radius: 15px;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#modalMotContent .fa-check-circle {
+    color: #008000 !important;
+}
+
+#modalMotContent .mot-status-header .test-date {
+    background: #ccc;
+    color: #333;
+    font-size: 0.85rem;
+    padding: 2px 10px;
+    border-radius: 12px;
+}
+
+#modalMotContent .mot-status-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+#modalMotContent .mot-row {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px 0;
+}
+
+#modalMotContent .pac-container {
+    z-index: 999999999 !important;
+}
+
+#modalMotContent .custom-heading::after {
+    width: 100%;
+}
+
+#modalMotContent .custom-heading::before {
+    left: 100%;
+}
+
+#modalMotContent .advisories ul {
+    margin-left: 37px;
+}
+
+/* Mot history popup */
+
+.d-block {
+    display: inline-block !important;
+}
