update customer profile invoice improvements

--- a/css/user/styles.css
+++ b/css/user/styles.css
@@ -890,3 +890,9 @@ body.all-hide iframe {
 .d-block {
     display: inline-block !important;
 }
+
+#viewInvoicesContainer,
+#carsInfoContainer {
+    height: 500px;
+    overflow: auto;
+}
