--- a/user/css/calendar.css
+++ b/user/css/calendar.css
@@ -1,4 +1,4 @@
-    .fc {
+    /* .fc {
         direction: ltr;
         text-align: left;
     }
@@ -960,7 +960,6 @@
         color: #808080;
     }
 
-    /* when week/day number have own column */
     .fc-basic-view td.fc-week-number {
         text-align: center;
     }
@@ -1059,7 +1058,6 @@
     }
 
     .fc-time-grid .fc-helper-container {
-        /* also is fc-event-container */
         position: relative;
         z-index: 6;
     }
@@ -1489,4 +1487,96 @@
 
     .table tbody tr:last-child td {
         border-bottom: 1px solid #0002 !important;
+    }
+
+    .fc-event-container a {
+        float: left;
+        width: 100%;
+    } */
+
+
+    .fc-event,
+    .fc-event-dot {
+        background-color: var(--webMainColor) !important;
+    }
+
+    .fc-event {
+        border-color: white !important;
+        padding: 5px !important;
+    }
+
+    .fc-toolbar .fc-center {
+        flex: 1;
+        display: flex !important;
+        justify-content: end;
+        align-items: center;
+        display: inline-block;
+    }
+
+    .fc-toolbar .fc-center .btn-group {
+        padding: 6px;
+        background: #f3f4f6 !important;
+        border-radius: 10px;
+    }
+
+    .fc-toolbar .fc-center button {
+        background: #f3f4f6 !important;
+        color: var(--webMainColor) !important;
+        outline: none !important;
+        cursor: pointer;
+        border-radius: 10px !important;
+        margin: 0 6px;
+        background: transparent !important;
+        box-shadow: none;
+    }
+
+    .fc-toolbar .fc-center button:hover,
+    .fc-toolbar .fc-center button.active {
+        background-color: white !important;
+        border-radius: 6px !important;
+        border: none !important;
+    }
+
+    .fc-toolbar.fc-header-toolbar {
+        margin-bottom: 1em;
+        background: white;
+        padding: 15px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+    }
+
+    .fc-toolbar .fc-right {
+        float: right;
+        margin-left: 20px;
+    }
+
+    .fc-toolbar .fc-right button,
+    .fc-toolbar .fc-right button:active,
+    .fc-toolbar .fc-right button:focus,
+    .fc-toolbar .fc-right button:hover {
+        background: transparent !important;
+        color: var(--webMainColor) !important;
+        outline: none !important;
+        cursor: pointer;
+        box-shadow: none;
+    }
+
+    .fc-toolbar .fc-right .fc-today-button {
+        border: 2px solid var(--webMainColor);
+        border-radius: 10px;
+        padding: 8px 15px !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .fc-toolbar .fc-right i {
+        font-size: 20px;
+    }
+
+    .btn-primary:not(:disabled):not(.disabled).active:focus,
+    .btn-primary:not(:disabled):not(.disabled):active:focus,
+    .show>.btn-primary.dropdown-toggle:focus {
+        box-shadow: none !important;
     }
